force-app/main/default/objects/Account/fields/pontosTotalQualificacao__c.field-meta.xml
<CustomField>
    <fullName>pontosTotalQualificacao__c</fullName>
    <formula>IF(qualificacaoProduto__c == false &amp;&amp; 
qualificaPrazo__c == false &amp;&amp; 
qualificaAtendimento__c == false &amp;&amp;  
Servi_o_de_garantia_do_fabricante__c == false,
 &apos;0&apos;,

IF(qualificacaoProduto__c == false &amp;&amp; 
qualificaPrazo__c == false &amp;&amp; 
qualificaAtendimento__c == false &amp;&amp;  
Servi_o_de_garantia_do_fabricante__c == true,
 &apos;20&apos;,

IF(qualificacaoProduto__c == false &amp;&amp; 
qualificaPrazo__c == false &amp;&amp; 
qualificaAtendimento__c == true &amp;&amp;  
Servi_o_de_garantia_do_fabricante__c == false,
 &apos;15&apos;,

IF(qualificacaoProduto__c == false &amp;&amp; 
qualificaPrazo__c == false &amp;&amp; 
qualificaAtendimento__c == true &amp;&amp;  
Servi_o_de_garantia_do_fabricante__c == true,
 &apos;45&apos;,

IF(qualificacaoProduto__c == false &amp;&amp; 
qualificaPrazo__c == true &amp;&amp; 
qualificaAtendimento__c == false &amp;&amp;  
Servi_o_de_garantia_do_fabricante__c == false,
 &apos;20&apos;,

IF(qualificacaoProduto__c == false &amp;&amp; 
qualificaPrazo__c == true &amp;&amp; 
qualificaAtendimento__c == false &amp;&amp;  
Servi_o_de_garantia_do_fabricante__c == true,
 &apos;40&apos;,

IF(qualificacaoProduto__c == false &amp;&amp; 
qualificaPrazo__c == true &amp;&amp; 
qualificaAtendimento__c == true &amp;&amp;  
Servi_o_de_garantia_do_fabricante__c == false,
 &apos;35&apos;,

IF(qualificacaoProduto__c == false &amp;&amp; 
qualificaPrazo__c == true &amp;&amp; 
qualificaAtendimento__c == true &amp;&amp;  
Servi_o_de_garantia_do_fabricante__c == true,
 &apos;55&apos;,


IF(qualificacaoProduto__c == true &amp;&amp; 
qualificaPrazo__c == false &amp;&amp; 
qualificaAtendimento__c == false &amp;&amp;  
Servi_o_de_garantia_do_fabricante__c == false,
 &apos;45&apos;,


IF(qualificacaoProduto__c == true &amp;&amp; 
qualificaPrazo__c == false &amp;&amp; 
qualificaAtendimento__c == false &amp;&amp;  
Servi_o_de_garantia_do_fabricante__c == true,
 &apos;65&apos;,


IF(qualificacaoProduto__c == true &amp;&amp; 
qualificaPrazo__c == false &amp;&amp; 
qualificaAtendimento__c == true &amp;&amp;  
Servi_o_de_garantia_do_fabricante__c == false,
 &apos;60&apos;,


IF(qualificacaoProduto__c == true &amp;&amp; 
qualificaPrazo__c == false &amp;&amp; 
qualificaAtendimento__c == true &amp;&amp;  
Servi_o_de_garantia_do_fabricante__c == true,
 &apos;80&apos;,


IF(qualificacaoProduto__c == true &amp;&amp; 
qualificaPrazo__c == true &amp;&amp; 
qualificaAtendimento__c == false &amp;&amp;  
Servi_o_de_garantia_do_fabricante__c == false,
 &apos;65&apos;,

IF(qualificacaoProduto__c == true &amp;&amp; 
qualificaPrazo__c == true &amp;&amp; 
qualificaAtendimento__c == false &amp;&amp;  
Servi_o_de_garantia_do_fabricante__c == true,
 &apos;85&apos;,



IF(qualificacaoProduto__c == true &amp;&amp; 
qualificaPrazo__c == true &amp;&amp; 
qualificaAtendimento__c == true &amp;&amp;  
Servi_o_de_garantia_do_fabricante__c == false,
 &apos;80&apos;,
&apos;100&apos;
)))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontos Total da Qualificação</label>
    <type>Text</type>
</CustomField>