force-app/main/default/objects/Account/fields/Prazo_Alvara_Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Alvara_Fornecedor__c</fullName>
    <formula>IF(
(Validade_Alvara_Fornecedor__c - TODAY())&gt; 1,
TEXT((Validade_Alvara_Fornecedor__c - TODAY())) &amp; &quot; Dias p/ Vencer&quot;,
IF(
(Validade_Alvara_Fornecedor__c - TODAY())= 1,
&quot;Vence Amanhã&quot;,
IF(
(Validade_Alvara_Fornecedor__c - TODAY())= 0,
&quot;Vence Hoje&quot;,
IF(
(Validade_Alvara_Fornecedor__c - TODAY())= -1,
TEXT((Validade_Alvara_Fornecedor__c - TODAY())*(-1)) &amp; &quot; Dia Vencido&quot;,
TEXT((Validade_Alvara_Fornecedor__c - TODAY())*(-1)) &amp; &quot; Dias Vencido&quot;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo Alvará Fornecedor</label>
    <type>Text</type>
</CustomField>