force-app/main/default/objects/Account/fields/Prazo_CRT__c.field-meta.xml
<CustomField>
    <fullName>Prazo_CRT__c</fullName>
    <formula>IF(
Conta_Dias_CRT__c  &gt; 1,
TEXT(Conta_Dias_CRT__c   ) &amp; &quot; Dias p/ Vencer&quot;,
IF(
Conta_Dias_CRT__c   = 1,
&quot;Vence Amanhã&quot;,
IF(
Conta_Dias_CRT__c   = 0,
&quot;Vence Hoje&quot;,
IF(
Conta_Dias_CRT__c   = -1,
TEXT(Conta_Dias_CRT__c   *(-1)) &amp; &quot; Dia Vencido&quot;,
TEXT(Conta_Dias_CRT__c   *(-1)) &amp; &quot; Dias Vencido&quot;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo CRT</label>
    <type>Text</type>
</CustomField>