force-app/main/default/objects/Account/fields/qualificaAtendimento__c.field-meta.xml
<CustomField>
    <fullName>qualificaAtendimento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atendimento (15Pts)</label>
    <type>Checkbox</type>
</CustomField>