force-app/main/default/objects/Account/fields/qualificacaoProduto__c.field-meta.xml
<CustomField>
    <fullName>qualificacaoProduto__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Qualidade Produto/Serviço (45pts)</inlineHelpText>
    <label>Qualidade Produto/Serviço (45Pts)</label>
    <type>Checkbox</type>
</CustomField>