force-app/main/default/objects/Account/fields/Quantidade_de_leitos__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_leitos__c</fullName>
    <label>Quantidade de leitos</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>