force-app/main/default/objects/Account/fields/Raz_o_Social__c.field-meta.xml
<CustomField>
    <fullName>Raz_o_Social__c</fullName>
    <label>Razão social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>