force-app/main/default/objects/Account/fields/Regiao_Administrativa_DF__c.field-meta.xml
<CustomField>
    <fullName>Regiao_Administrativa_DF__c</fullName>
    <label>Região Administrativa (DF)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGUAS CLARAS</fullName>
            </value>
            <value>
                <fullName>ARNIQUEIRA</fullName>
            </value>
            <value>
                <fullName>BRAZLANDIA</fullName>
            </value>
            <value>
                <fullName>CANDANGOLANDIA</fullName>
            </value>
            <value>
                <fullName>CEILANDIA</fullName>
            </value>
            <value>
                <fullName>CRUZEIRO</fullName>
            </value>
            <value>
                <fullName>FERCAL</fullName>
            </value>
            <value>
                <fullName>GAMA</fullName>
            </value>
            <value>
                <fullName>GUARA</fullName>
            </value>
            <value>
                <fullName>ITAPOA</fullName>
            </value>
            <value>
                <fullName>JARDIM BOTANICO</fullName>
            </value>
            <value>
                <fullName>LAGO NORTE</fullName>
            </value>
            <value>
                <fullName>LAGO SUL</fullName>
            </value>
            <value>
                <fullName>NUCLEO BANDEIRANTE</fullName>
            </value>
            <value>
                <fullName>PARANOA</fullName>
            </value>
            <value>
                <fullName>PARK WAY</fullName>
            </value>
            <value>
                <fullName>PLANALTINA</fullName>
            </value>
            <value>
                <fullName>PLANO PILOTO</fullName>
            </value>
            <value>
                <fullName>RECANTO DAS EMAS</fullName>
            </value>
            <value>
                <fullName>RIACHO FUNDO</fullName>
            </value>
            <value>
                <fullName>RIACHO FUNDO II</fullName>
            </value>
            <value>
                <fullName>SAMAMBAIA</fullName>
            </value>
            <value>
                <fullName>SANTA MARIA</fullName>
            </value>
            <value>
                <fullName>SAO SEBASTIAO</fullName>
            </value>
            <value>
                <fullName>SCIA</fullName>
            </value>
            <value>
                <fullName>SIA</fullName>
            </value>
            <value>
                <fullName>SOBRADINHO</fullName>
            </value>
            <value>
                <fullName>SOBRADINHO II</fullName>
            </value>
            <value>
                <fullName>SOL NASCENTE/  POR DO SOL</fullName>
            </value>
            <value>
                <fullName>SUDOESTE/ OCTOGONAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>