force-app/main/default/objects/Account/fields/Registro_na_prefeitura__c.field-meta.xml
<CustomField>
    <fullName>Registro_na_prefeitura__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registro na prefeitura</label>
    <type>Checkbox</type>
</CustomField>