force-app/main/default/objects/Account/fields/registroEmpresaConselho__c.field-meta.xml
<CustomField>
    <fullName>registroEmpresaConselho__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Registro da empresa no Conselho Regional responsável. (Se aplicável. Ex.: CREA, CREFITO, etc.)</inlineHelpText>
    <label>Certificado de responsabilidade técnica</label>
    <type>Checkbox</type>
</CustomField>