force-app/main/default/objects/Account/fields/Respons_vel_pela_Avalia_o_do_fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Respons_vel_pela_Avalia_o_do_fornecedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável pela Avaliação do fornecedor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contas</relationshipLabel>
    <relationshipName>Contas</relationshipName>
    <type>Lookup</type>
</CustomField>