force-app/main/default/objects/Account/fields/SaldoDeCredito__c.field-meta.xml
<CustomField>
    <fullName>SaldoDeCredito__c</fullName>
    <formula>Limite_de_cr_dito__c - Credito_Utilizado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo de Crédito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>