force-app/main/default/objects/Account/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <inlineHelpText>Score do Cliente: Avalia a confiabilidade entre 0 e 100, considerando pendências (50%), saldo total (25%), valor médio das parcelas (20%), e recência dos dados (5%). Quanto maior, melhor a avaliação de crédito.</inlineHelpText>
    <label>Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>