force-app/main/default/objects/Account/fields/Servi_o_de_garantia_do_fabricante__c.field-meta.xml
<CustomField>
    <fullName>Servi_o_de_garantia_do_fabricante__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serviço de garantia do fabricante(20pts)</label>
    <type>Checkbox</type>
</CustomField>