force-app/main/default/objects/Account/fields/Status_da_Conta__c.field-meta.xml
<CustomField>
    <fullName>Status_da_Conta__c</fullName>
    <formula>IF(
    ISPICKVAL(Type, &quot;FORNECEDOR&quot;),
    &quot;FORNECEDOR&quot;,

    IF(
        AND(TODAY() &gt; DATEVALUE(Data_do_Ultimo_Pedido__c) + 120, TODAY() &lt;= DATEVALUE(Data_do_Ultimo_Pedido__c) + 240),
        &quot;Parcialmente Ativo&quot;,

        IF(
            AND(TODAY() &gt; DATEVALUE(Data_do_Ultimo_Pedido__c) + 240, TODAY() &lt;= DATEVALUE(Data_do_Ultimo_Pedido__c) + 365 ),
            &quot;Parcialmente Inativo&quot;,

            IF(
                TODAY() &lt; DATEVALUE(Data_do_Ultimo_Pedido__c) + 120,
                &quot;Ativo&quot;,

                IF(
                    TODAY() &gt; DATEVALUE(Data_do_Ultimo_Pedido__c) + 365,
                    &quot;Inativo&quot;,
                    &quot;Inativo&quot;
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo gerado automaticamente para Clientes Finais, levando em consideração a data do ultimo pedido de venda.</inlineHelpText>
    <label>Status da Conta</label>
    <type>Text</type>
</CustomField>