force-app/main/default/objects/Account/fields/Status_receita__c.field-meta.xml
<CustomField>
    <fullName>Status_receita__c</fullName>
    <label>Status receita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>