force-app/main/default/objects/Account/fields/Subcategoria__c.field-meta.xml
<CustomField>
    <fullName>Subcategoria__c</fullName>
    <label>Subcategoria</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Categoria__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinica de cirurgia plástica</fullName>
            </value>
            <value>
                <fullName>Cardiologia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>