force-app/main/default/objects/Account/fields/Subespecialidade__c.field-meta.xml
<CustomField>
    <fullName>Subespecialidade__c</fullName>
    <label>Subespecialidade</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Ortopedia esportiva</fullName>
            </value>
            <value>
                <fullName>Vascular.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>