force-app/main/default/objects/Account/fields/TIPO__c.field-meta.xml
<CustomField>
    <fullName>TIPO__c</fullName>
    <label>Tipo de fornecedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Produto para saúde importado classe I e II</fullName>
            </value>
            <value>
                <fullName>Produto para saúde importado classe III e IV</fullName>
            </value>
            <value>
                <fullName>Produto para saúde nacional classe I e II</fullName>
            </value>
            <value>
                <fullName>Produto para saúde nacional classe III e IV</fullName>
            </value>
            <value>
                <fullName>Matéria prima/Componentes Importado</fullName>
            </value>
            <value>
                <fullName>Matéria prima/Componentes Nacional (não é produto para a saúde)</fullName>
            </value>
            <value>
                <fullName>Embalagem primária(Fábrica)</fullName>
            </value>
            <value>
                <fullName>Calibração(analisador/simulador/termo higrômetro)</fullName>
            </value>
            <value>
                <fullName>Desinsetização, desratilização e limpeza caixa d&quot;agua - RDC 622</fullName>
            </value>
            <value>
                <fullName>Laboratórios de  análise e validação(Fábrica)</fullName>
            </value>
            <value>
                <fullName>Destinação de resíduos</fullName>
            </value>
            <value>
                <fullName>Esterilização(Prestador serviço)</fullName>
            </value>
            <value>
                <fullName>Climatizadores/condicionadores de ar(Corretiva e preventiva)</fullName>
            </value>
            <value>
                <fullName>Manutenção fluxo lamiar(Fábrica)</fullName>
            </value>
            <value>
                <fullName>Manutenção Seladora(Fabrica)</fullName>
            </value>
            <value>
                <fullName>Transportadora</fullName>
            </value>
            <value>
                <fullName>Saneantes(Fábrica)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>