force-app/main/default/objects/Account/fields/Total_comprado__c.field-meta.xml
<CustomField>
    <fullName>Total_comprado__c</fullName>
    <label>Total comprado</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>