force-app/main/default/objects/Account/fields/Total_em_aberto__c.field-meta.xml
<CustomField>
    <fullName>Total_em_aberto__c</fullName>
    <inlineHelpText>Total de contas a receber em atraso</inlineHelpText>
    <label>Total em aberto</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>