force-app/main/default/objects/Account/fields/Total_opp_open__c.field-meta.xml
<CustomField>
    <fullName>Total_opp_open__c</fullName>
    <label>Total Opps open</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.ForecastCategoryName</field>
        <operation>notEqual</operation>
        <value>Loss, Win</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>