force-app/main/default/objects/Account/fields/Transportadora__c.field-meta.xml
<CustomField>
    <fullName>Transportadora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Utilizado para vincular contas de transportadora da empresa</inlineHelpText>
    <label>Transportadora</label>
    <referenceTo>Transportadora__c</referenceTo>
    <relationshipLabel>Contas</relationshipLabel>
    <relationshipName>Contas</relationshipName>
    <type>Lookup</type>
</CustomField>