force-app/main/default/objects/Account/fields/Ultima_avali_o_de_fornecedores__c.field-meta.xml
<CustomField>
    <fullName>Ultima_avali_o_de_fornecedores__c</fullName>
    <label>Ultima avalição de fornecedores</label>
    <type>Date</type>
</CustomField>