force-app/main/default/objects/Account/fields/Ultima_cobran_a__c.field-meta.xml
<CustomField>
    <fullName>Ultima_cobran_a__c</fullName>
    <label>Última cobrança</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>