force-app/main/default/objects/Account/fields/Ultima_opp_criada__c.field-meta.xml
<CustomField>
    <fullName>Ultima_opp_criada__c</fullName>
    <label>Última opp criada*</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>