force-app/main/default/objects/Account/fields/ultimo_contato_conta__c.field-meta.xml
<CustomField>
    <fullName>ultimo_contato_conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Informação inserida automaticamente com os dados do ultimo contato da conta</inlineHelpText>
    <label>Ultimo contato da conta</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contas (Ultimo contato da conta)</relationshipLabel>
    <relationshipName>Contas3</relationshipName>
    <type>Lookup</type>
</CustomField>