force-app/main/default/objects/Account/fields/Validade_Alvara__c.field-meta.xml
<CustomField>
    <fullName>Validade_Alvara__c</fullName>
    <label>Validade Alvará</label>
    <type>Date</type>
</CustomField>