force-app/main/default/objects/Account/fields/Validade_Alvara_Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Validade_Alvara_Fornecedor__c</fullName>
    <label>Validade Alvará Fornecedor</label>
    <type>Date</type>
</CustomField>