force-app/main/default/objects/Account/fields/Validade_CRT__c.field-meta.xml
<CustomField>
    <fullName>Validade_CRT__c</fullName>
    <label>Validade CRT</label>
    <type>Date</type>
</CustomField>