force-app/main/default/objects/Account/fields/Valor_devido__c.field-meta.xml
<CustomField>
    <fullName>Valor_devido__c</fullName>
    <label>Valor devido</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>