force-app/main/default/objects/Account/fields/Valor_total_em_pedido_em_compra__c.field-meta.xml
<CustomField>
    <fullName>Valor_total_em_pedido_em_compra__c</fullName>
    <label>Valor total em pedido em compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>