force-app/main/default/objects/Account/fields/Venc_AFE__c.field-meta.xml
<CustomField>
    <fullName>Venc_AFE__c</fullName>
    <label>Venc. - AFE</label>
    <type>Date</type>
</CustomField>