force-app/main/default/objects/Account/fields/venc_Alv_Localizacao__c.field-meta.xml
<CustomField>
    <fullName>venc_Alv_Localizacao__c</fullName>
    <label>venc. Alv. Localização</label>
    <type>Date</type>
</CustomField>