force-app/main/default/objects/Account/fields/Venc_Alvar_localiza_o_funcionamento__c.field-meta.xml
<CustomField>
    <fullName>Venc_Alvar_localiza_o_funcionamento__c</fullName>
    <label>Venc. - Alvará localização/funcionamento</label>
    <type>Date</type>
</CustomField>