force-app/main/default/objects/Account/fields/Venc_Certificado_BPF__c.field-meta.xml
<CustomField>
    <fullName>Venc_Certificado_BPF__c</fullName>
    <label>Venc. - Certificado BPF</label>
    <type>Date</type>
</CustomField>