force-app/main/default/objects/Account/fields/Venc_Certificado_de_respons_bilidade__c.field-meta.xml
<CustomField>
    <fullName>Venc_Certificado_de_respons_bilidade__c</fullName>
    <label>Venc. - Certificado de responsabilidade</label>
    <type>Date</type>
</CustomField>