force-app/main/default/objects/Account/fields/Venc_ISO_13485_9001__c.field-meta.xml
<CustomField>
    <fullName>Venc_ISO_13485_9001__c</fullName>
    <label>Venc. - ISO 13485/9001</label>
    <type>Date</type>
</CustomField>