force-app/main/default/objects/Account/fields/Venc_ISO_17025__c.field-meta.xml
<CustomField>
    <fullName>Venc_ISO_17025__c</fullName>
    <label>Venc. - ISO 17025</label>
    <type>Date</type>
</CustomField>