force-app/main/default/objects/Account/recordTypes/Conta_comercial.recordType-meta.xml
<RecordType>
    <fullName>Conta_comercial</fullName>
    <active>true</active>
    <description>Parceiro de negócio pessoa jurídica (CNPJ)</description>
    <label>Conta comercial</label>
</RecordType>