force-app/main/default/objects/Account/validationRules/Acentos.validationRule-meta.xml
<ValidationRule>
    <fullName>Acentos</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX(BillingCity, &quot;[^a-zA-Z0-9\\s]&quot;))</errorConditionFormula>
    <errorDisplayField>BillingCity</errorDisplayField>
    <errorMessage>Não são aceitos caracteres especiais no campo Cidade de cobrança</errorMessage>
</ValidationRule>