force-app/main/default/objects/Account/validationRules/Alvara_localizacao_funcionamento.validationRule-meta.xml
<ValidationRule>
    <fullName>Alvara_localizacao_funcionamento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Alvara_localizacao_funcionamento__c = true, 
ISBLANK( Venc_Alvar_localiza_o_funcionamento__c ))</errorConditionFormula>
    <errorDisplayField>Venc_Alvar_localiza_o_funcionamento__c</errorDisplayField>
    <errorMessage>Obrigatório</errorMessage>
</ValidationRule>