force-app/main/default/objects/Account/validationRules/Alvara_Sanitario_DOC.validationRule-meta.xml
<ValidationRule>
    <fullName>Alvara_Sanitario_DOC</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Alvar_Sanit_rio_DOC__c = true, 
ISBLANK(  Venc_Alvar_sanit_rio__c ))</errorConditionFormula>
    <errorDisplayField>Venc_Alvar_sanit_rio__c</errorDisplayField>
    <errorMessage>Obrigatório</errorMessage>
</ValidationRule>