force-app/main/default/objects/Account/validationRules/area_da_saude_fornecedor.validationRule-meta.xml
<ValidationRule>
    <fullName>area_da_saude_fornecedor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Ignorar_erros__c,
    ISPICKVAL(Area_da_Saude__c, &quot;Sim&quot;),
ISBLANK(TEXT(TIPO__c))
)</errorConditionFormula>
    <errorDisplayField>TIPO__c</errorDisplayField>
    <errorMessage>É necessário atribuir um tipo de fornecedor para empresas da área da saúde.</errorMessage>
</ValidationRule>