force-app/main/default/objects/Account/validationRules/avaliacao_fornecedor_DOCS4.validationRule-meta.xml
<ValidationRule>
    <fullName>avaliacao_fornecedor_DOCS4</fullName>
    <active>true</active>
    <errorConditionFormula>Fornecedor_desqualificado__c &amp;&amp; ISBLANK(Motivo__c)</errorConditionFormula>
    <errorDisplayField>Motivo__c</errorDisplayField>
    <errorMessage>Fale o porque do fornecedor estar desqualificado</errorMessage>
</ValidationRule>