force-app/main/default/objects/Account/validationRules/Categoria_Hospital.validationRule-meta.xml
<ValidationRule>
    <fullName>Categoria_Hospital</fullName>
    <active>true</active>
    <errorConditionFormula>if( TEXT(Categoria__c) == &apos;HOSPITAL&apos; &amp;&amp;  Quantidade_de_leitos__c == null , true, false )</errorConditionFormula>
    <errorDisplayField>Quantidade_de_leitos__c</errorDisplayField>
    <errorMessage>Selecione a Quantidade de leitos do hospital</errorMessage>
</ValidationRule>