force-app/main/default/objects/Account/validationRules/Certificado_de_BPF_anvisa.validationRule-meta.xml
<ValidationRule>
    <fullName>Certificado_de_BPF_anvisa</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Certificado_de_BPF_anvisa__c = true, 
ISBLANK(Venc_Certificado_BPF__c))</errorConditionFormula>
    <errorDisplayField>Venc_Certificado_BPF__c</errorDisplayField>
    <errorMessage>Obrigatório</errorMessage>
</ValidationRule>