force-app/main/default/objects/Account/validationRules/Certificado_de_responsabilidade_tecnica.validationRule-meta.xml
<ValidationRule>
    <fullName>Certificado_de_responsabilidade_tecnica</fullName>
    <active>true</active>
    <errorConditionFormula>AND(registroEmpresaConselho__c	 = true, 
ISBLANK( Venc_Certificado_de_respons_bilidade__c ))</errorConditionFormula>
    <errorDisplayField>Venc_Certificado_de_respons_bilidade__c</errorDisplayField>
    <errorMessage>Obrigatório</errorMessage>
</ValidationRule>