force-app/main/default/objects/Account/validationRules/CNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>CNPJ</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    !$User.Ignorar_erros__c,
    BillingCountry != &apos;Colômbia&apos;,
    CNPJ__c != &apos;&apos;,
    NOT(REGEX(CNPJ__c, &quot;\\d{2}\\.\\d{3}\\.\\d{3}/\\d{4}-\\d{2}&quot;))
)</errorConditionFormula>
    <errorDisplayField>CNPJ__c</errorDisplayField>
    <errorMessage>O CNPJ deve ter o formato XX.XXX.XXX/XXXX-XX</errorMessage>
</ValidationRule>