force-app/main/default/objects/Account/validationRules/Conta_comercial_com_reg_na_prefeitura.validationRule-meta.xml
<ValidationRule>
    <fullName>Conta_comercial_com_reg_na_prefeitura</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	RecordType.Name == &apos;Conta comercial&apos;,
	Registro_na_prefeitura__c == true,
	ParentId == null
)</errorConditionFormula>
    <errorMessage>Conta comercial com registro na prefeitura deve ser associada a conta gestora/pai.</errorMessage>
</ValidationRule>