force-app/main/default/objects/Account/validationRules/Conta_comercial_sem_reg_na_prefeitura.validationRule-meta.xml
<ValidationRule>
    <fullName>Conta_comercial_sem_reg_na_prefeitura</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	RecordType.Name == &apos;Conta comercial&apos;,
	Registro_na_prefeitura__c == false,
	CNPJ__c == null,
        BillingCountry == &apos;Brasil&apos;
)</errorConditionFormula>
    <errorDisplayField>CNPJ__c</errorDisplayField>
    <errorMessage>Conta comercial sem vínculo com prefeitura deve ter número CNPJ.</errorMessage>
</ValidationRule>