force-app/main/default/objects/Account/validationRules/Conta_pessoal_sem_nomes.validationRule-meta.xml
<ValidationRule>
    <fullName>Conta_pessoal_sem_nomes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	!$User.Ignorar_erros__c,
	RecordType.Name == &apos;Conta pessoal&apos;,
	OR(
		FirstName == null,
		LastName == null
	)
)</errorConditionFormula>
    <errorMessage>Preencha ao menos o primeiro e o ultimo nome.</errorMessage>
</ValidationRule>