force-app/main/default/objects/Account/validationRules/Contas_novas_em_rascunho.validationRule-meta.xml
<ValidationRule>
    <fullName>Contas_novas_em_rascunho</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    NOT(ISPICKVAL(Status__c, &quot;Rascunho&quot;))
)</errorConditionFormula>
    <errorMessage>Novas contas devem ser criadas com o status em Rascunho.</errorMessage>
</ValidationRule>