force-app/main/default/objects/Account/validationRules/CPF.validationRule-meta.xml
<ValidationRule>
    <fullName>CPF</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    !$User.Ignorar_erros__c,
    CPF__pc != null,
    NOT(REGEX(CPF__pc, &quot;^\\d{3}\\.\\d{3}\\.\\d{3}-\\d{2}$&quot;))

)</errorConditionFormula>
    <errorDisplayField>CPF__pc</errorDisplayField>
    <errorMessage>O CPF deve ser formatado (XXX.XXX.XXX-XX)</errorMessage>
</ValidationRule>