force-app/main/default/objects/Account/validationRules/CPF_BRASIL.validationRule-meta.xml
<ValidationRule>
    <fullName>CPF_BRASIL</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
BillingCountry == &apos;Brasil&apos;,
ISNEW(),
RecordTypeId == &apos;0125A000001ETFq&apos;,
CPF__pc == null
)</errorConditionFormula>
    <errorDisplayField>CPF__pc</errorDisplayField>
    <errorMessage>Preencha o CPF da conta.</errorMessage>
</ValidationRule>